# FastAPI-MySql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  run.bat  run.sh
DeveloperNotes/: Note.md
app/: auth_helper.py  config.py  main.py  secret_helper.py
app/database/: database.py
app/database/models/: base.py  department.py  user.py
app/models/: common_model.py
app/routers/: common.py  dispatch_detail.py  production_detail.py  raw_material.py
