[tool.poetry]
name = "fastapi-mysql"
version = "0.1.0"
description = "FastAPI and MySQL project"
authors = ["Umar Basha - Tech Monk <umarbasha007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.29"
pymysql = "^1.1.0"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
